--- a/bin/src/main/resources/templates/modificarContrasenya.html
+++ b/bin/src/main/resources/templates/modificarContrasenya.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="remember-forgot" style="margin-bottom: 2px;">
-                <p>¿Has recordado la contraseña? <a th:href="@{/acceso/login}" style="font-weight: 600;">Pulsa aquí</a></p>
+                <p>¿Has recordado la contraseña? <a  style="font-weight: 600;">Pulsa aquí</a></p>
             </div>
 
             <button type="submit" class="boton">Enviar</button>
