--- a/bin/src/main/resources/templates/login.html
+++ b/bin/src/main/resources/templates/login.html
@@ -20,39 +20,21 @@
 </head>
 <body>
     <div class="wrapper">
-        <form method="post" th:action="@{/acceso/login}">
+        <form>
             <h1>Inicio Sesión</h1>
             <div class="input-box">
-                <input type="email" placeholder="Email" name="username" required>
+                <input type="email" placeholder="Email" name="email_usuario" required>
                 <i class="fa-solid fa-envelope"></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Contraseña" name="password" required>
+                <input type="password" placeholder="Contraseña" name="psswd_usuario" required>
                 <i class="fa-solid fa-lock"></i>
             </div>
 
             <div class="remember-forgot">
                 <a th:href="@{/acceso/modificar-password}">¿Has olvidado la contraseña?</a>
             </div>
-			
-			<!-- Control de alertas -->
-            <div th:if="${param.logout}" class="alert alert-success" role="alert">
-                Se ha cerrado la sesión con éxito!!
-            </div>
-            
-            <div th:if="${param.activada}" class="alert alert-danger" role="alert">
-                La cuenta no ha sido activada!!
-            </div>
-            
-            <div th:if="${param.email}" class="alert alert-danger" role="alert">
-                El email y/o contraseña no son correctos!!
-            </div>
-            
-            <div th:if="${param.error}" class="alert alert-danger" role="alert">
-                Se ha producido un error. Vuelve a intentarlo más tarde!!
-            </div>
-            <!-- Fin Control de alertas -->
-			
+
             <button type="submit" class="boton">Enviar</button>
 
             <div class="register-link">
