--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,206 @@
 <!DOCTYPE html>
-<html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Home - ProyectoFinalDIW</title>
+	<!-- Bootstrap -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"
+		asp-append-version="true">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
+		asp-append-version="true"></script>
+	<!-- Fin Bootstrap -->
+	<!-- CSS -->
+	<link rel="stylesheet" href="css/style.css" asp-append-version="true" />
+	<!-- Fin CSS -->
+	<!-- Font awesome -->
+	<link
+		href="https://cdn.jsdelivr.net/gh/eliyantosarage/font-awesome-pro@main/fontawesome-pro-6.5.1-web/css/all.min.css"
+		rel="stylesheet" asp-append-version="true">
+	<!-- Fin Font awesome -->
 </head>
+
 <body>
-	<h1>Vista Home</h1>
+	<header>
+		<nav class="navbar navbar-expand-lg"
+			style="background: linear-gradient(90deg, rgba(141,148,241,1) 0%, rgba(157,141,241,1) 49%, rgba(181,141,241,1) 100%);;">
+			<div class="container-fluid">
+				<img src="img/logo2.png" alt="Logo" width="40" height="40"
+					class="d-inline-block align-text-top">
+				<a class="navbar-brand text-white nombreTiendaSuplementos">Tienda de Suplementos</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent" style="margin-top: 5px;">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link active text-white" aria-current="page">Home</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle text-white" href="#" role="button"
+								data-bs-toggle="dropdown" aria-expanded="false">
+								Nutrición
+							</a>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" href="#">Proteínas</a></li>
+								<li><a class="dropdown-item" href="#">Creatina</a></li>
+								<li>
+									<hr class="dropdown-divider">
+								</li>
+								<li><a class="dropdown-item" href="#">Ver Todo</a></li>
+							</ul>
+						</li>
+						<li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+							<a class="nav-link text-white" asp-controller="Admin"
+								asp-action="VistaAdministracionUsuario">Administración</a>
+						</li>
+						<li class="nav-item perfilLink">
+							<a href="#" class="nav-link text-white">Perfil</a>
+						</li>
+					</ul>
+					<a href="#" class="iconoPerfil"><i class="fa-solid fa-user"></i></a>
+				</div>
+			</div>
+		</nav>
+	</header>
+	
+	<div class="container">
+		<main role="main" class="pb-3">
+			<!-- Carousel -->
+			<div class="row" style="margin-top: 50px;">
+				<div class="col">
+					<div id="carouselExampleIndicators" class="carousel slide">
+						<div class="carousel-indicators">
+							<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+								class="active" aria-current="true" aria-label="Slide 1"></button>
+							<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+								aria-label="Slide 2"></button>
+							<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+								aria-label="Slide 3"></button>
+						</div>
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img src="img/carouselFoto4.jpg" class="d-block w-100" alt="fotoSuplementos">
+							</div>
+							<div class="carousel-item">
+								<img src="img/carouselFoto5.jpg" class="d-block w-100" alt="fotoSuplementos">
+							</div>
+							<div class="carousel-item">
+								<img src="img/carouselFoto6.jpg" class="d-block w-100" alt="fotoSuplementos">
+							</div>
+						</div>
+						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+							data-bs-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Previous</span>
+						</button>
+						<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+							data-bs-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Next</span>
+						</button>
+					</div>
+				</div>
+			</div>
+
+			<!-- Productos Recomendados -->
+			<div class="row" style="margin-bottom: 20px">
+				<div class="col-12" style="font-size: 30px; font-weight: 600; text-align: center; margin: 30px 0;">
+					<i class="fa-solid fa-thumbs-up" style="color: rgba(141,148,241,1);"></i>
+					PRODUCTOS RECOMENDADOS
+				</div>
+				<div class="col-12">
+					<div class="row">
+						<div class="col-2">
+							<div class="card">
+								<img src="img/proteina-whey.avif" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">
+										Some quick example text to build on the card title and make up the
+										bulk of the card's content.
+									</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-2">
+							<div class="card">
+								<img src="img/creatina.png" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">
+										Some quick example text to build on the card title and make up the
+										bulk of the card's content.
+									</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-2">
+							<div class="card">
+								<img src="img/creatina.png" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">
+										Some quick example text to build on the card title and make up the
+										bulk of the card's content.
+									</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-2">
+							<div class="card">
+								<img src="img/creatina.png" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">
+										Some quick example text to build on the card title and make up the
+										bulk of the card's content.
+									</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-2">
+							<div class="card">
+								<img src="img/creatina.png" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">
+										Some quick example text to build on the card title and make up the
+										bulk of the card's content.
+									</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-2">
+							<div class="card">
+								<img src="img/creatina.png" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">
+										Some quick example text to build on the card title and make up the
+										bulk of the card's content.
+									</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+	</div>
 </body>
+
 </html>
