--- a/src/main/resources/templates/cambiarPassword.html
+++ b/src/main/resources/templates/cambiarPassword.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activar cuenta - Tienda de Suplementos</title>
+    <title>Restablecer Contraseña - Tienda de Suplementos</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -21,19 +21,21 @@
 </head>
 <body>
     <div class="wrapper">
-		<!-- Activado mensaje -->
-        <div th:if="${param.success}">
-			<h1>Cuenta activada</h1>
-			<p>Su cuenta ha sido activada, pulse <a th:href="@{/acceso/login}">aquí</a> para iniciar sesión.</p>
-		</div>
-		<!-- Fin Activado mensaje -->
-		
-		<!-- Error -->
-		<div th:if="${param.error}">
-			<h1>Error al activar la cuenta</h1>
-			<p>Se ha producido un error. Vuelva a intentarlo más tarde.</p>
-		</div>
-		<!-- Mensaje Error -->
+        <form method="post" th:action="@{/acceso/cambiar-password}" th:object="${usuarioDTO}">
+            <h1>Restablecer contraseña</h1>
+            <div class="input-box">
+                <input type="password" placeholder="Nueva Contraseña" name="psswd_usuario" th:field="*{psswd_usuario}" required>
+                <i class="fa-solid fa-envelope"></i>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="Introduzca de nuevo la contraseña" name="email_usuario" th:field="*{email_usuario}" required>
+                <i class="fa-solid fa-envelope"></i>
+            </div>
+			
+			<!-- Control de errores -->
+			<!-- Control de errores -->
+            <button type="submit" class="boton">Enviar</button>
+        </form>
     </div>
 </body>
 </html>
