--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,7 +39,7 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent" style="margin-top: 5px;">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active text-white" aria-current="page">Home</a>
+							<a class="nav-link active text-white" aria-current="page" th:href="@{/home}">Home</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle text-white" href="#" role="button"
@@ -56,8 +56,7 @@
 							</ul>
 						</li>
 						<li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-							<a class="nav-link text-white" asp-controller="Admin"
-								asp-action="VistaAdministracionUsuario">Administración</a>
+							<a class="nav-link text-white" th:href="@{/admin/administracion-usuarios}">Administración</a>
 						</li>
 						<li class="nav-item perfilLink">
 							<a href="#" class="nav-link text-white">Perfil</a>
