--- a/src/main/resources/templates/administracionSuplementos.html
+++ b/src/main/resources/templates/administracionSuplementos.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Administracion Usuarios - ProyectoFinalDIW</title>
+	<title>Administracion Suplementos - ProyectoFinalDIW</title>
 	<!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"
@@ -82,28 +82,30 @@
 					<table class="table table-dark table-hover">
 						<thead>
 							<tr>
-								<th scope="col">#</th>
-								<th scope="col">Nombre</th>
-								<th scope="col">Email</th>
-								<th scope="col">Rol</th>
-								<th scope="col">Editar/Eliminar</th>
+			                    <th scope="col">#</th>
+			                    <th scope="col">Nombre</th>
+			                    <th scope="col">Descripción</th>
+			                    <th scope="col">Precio</th>
+			                    <th scope="col">Tipo</th>
+			                    <th scope="col">Marca</th>
+			                    <th scope="col">Editar/Eliminar</th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr th:if="${listaUsuariosDTO != null && listaUsuariosDTO.size() < 1}">
-								<td colspan="5" style="text-align: center">No existe ningún usuario.</td>
+							<tr th:if="${listaSuplementosDTO != null && listaSuplementosDTO.size() < 1}">
+								<td colspan="7" style="text-align: center">No existe ningún suplemento.</td>
 							</tr>
-							<tr th:each="usuarioDTO, stat: ${listaUsuariosDTO}">
-								<th scope="row" th:text="${stat.index + 1}"></th>
-								<td th:text="${usuarioDTO.getNombre_usuario()}"></td>
-								<td th:text="${usuarioDTO.getEmail_usuario()}"></td>
-								<td th:if="${usuarioDTO.getId_acceso() == 2}">Admin</td>
-								<td th:if="${usuarioDTO.getId_acceso() == 1}">Usuario</td>
+							<tr th:each="suplementoDTO: ${listaSuplementosDTO}">
+								<th scope="row">1</th>
+								<td th:text="${suplementoDTO.getNombre_suplemento}"></td>
+								<td th:text="${suplementoDTO.getDesc_suplemento}"></td>
+								<td th:text="${suplementoDTO.getPrecio_suplemento}"></td>
+								<td th:text="${suplementoDTO.getTipo_suplemento}"></td>
+								<td th:text="${suplementoDTO.getMarca_suplemento}"></td>
 								<td>
 									<i class="fa-solid fa-pen-to-square" style="color: green; padding-left: 15px;"></i>
-									<i class="fa-solid fa-trash" style="color: red; padding-left: 35px;" 
-										th:attr="data-idUsuario=${usuarioDTO.getId_usuario()}, data-idAcceso=${usuarioDTO.getId_acceso()}" 
-										onclick="compruebaEsAdmin(event)"></i>
+									<i class="fa-solid fa-trash" style="color: red; padding-left: 35px;"
+										onclick="compruebaEliminar()"></i>
 								</td>
 							</tr>
 						</tbody>
@@ -113,56 +115,27 @@
 		</main>
 	</div>
 	<script>
-		function compruebaEsAdmin(event) {
-			const id_acceso = event.currentTarget.getAttribute("data-idAcceso");
-			const id_usuario = event.currentTarget.getAttribute("data-idUsuario");
-			if (id_acceso != 2) {
-				compruebaEliminar(id_usuario);
-			} else {
-				Swal.fire({
-					title: "Error!",
-					text: "No puedes borrar un Administrador!",
-					icon: "error"
-				});
-			}
-		}
-
-		function compruebaEliminar(id_usuario) {
-			Swal.fire({
-				title: "¿Estás seguro?",
-				text: "No se podrán revertir los cambios!",
-				icon: "warning",
-				showCancelButton: true,
-				confirmButtonColor: "#3085d6",
-				cancelButtonColor: "#d33",
-				confirmButtonText: "Si, eliminar!"
-			}).then((result) => {
-				if (result.isConfirmed) {
-					// Eliminamos
-					// Obtén la ruta base de la URL actual (localhost:1234)
-					const baseUrl = window.location.origin;
-
-					// Redirige a la nueva URL (/Admin/BorrarUsuario)
-					window.location.href = baseUrl + '/admin/borra-usuario/' + id_usuario;
-				}
-			});
-		}
-	</script>
+		function compruebaEliminar(id_suplemento) {
+	        Swal.fire({
+	            title: "¿Estás seguro?",
+	            text: "No se podrán revertir los cambios!",
+	            icon: "warning",
+	            showCancelButton: true,
+	            confirmButtonColor: "#3085d6",
+	            cancelButtonColor: "#d33",
+	            confirmButtonText: "Si, eliminar!",
+	            cancelButtonText: "Cancelar"
+	        }).then((result) => {
+	            if (result.isConfirmed) {
+	                // Eliminamos
+	                // Obtén la ruta base de la URL actual (localhost:1234)
+	                const baseUrl = window.location.origin;
 	
-	<script th:if="${param.success}">
-		Swal.fire({
-            title: "Éxito!",
-            text: "El usuario se ha borrado con éxito!",
-            icon: "success"
-        });
-	</script>
-	
-	<script th:if="${param.error}">
-		Swal.fire({
-            title: "Error!",
-            text: "El usuario no se ha podido eliminar!",
-            icon: "error"
-        });
+	                // Redirige a la nueva URL (/Admin/BorrarSuplemento)
+	                window.location.href = baseUrl + '/Admin/BorrarSuplemento/' + id_suplemento;
+	            }
+	        });
+    	}
 	</script>
 </body>
 
