--- a/src/main/resources/templates/administracionSuplementos.html
+++ b/src/main/resources/templates/administracionSuplementos.html
@@ -78,6 +78,7 @@
 					<div style="margin-bottom: 5px;">
 						<a class="btn btn-outline-secondary" role="button" th:href="@{/admin/administracion-usuarios}">Usuarios</a>
 						<a class="btn btn-outline-secondary"  role="button" th:href="@{/admin/administracion-suplementos}">Productos</a>
+						<a class="btn btn-outline-secondary" th:href="@{/admin/agrega-suplemento}" role="button" style="float: right">Añadir Producto</a>
 					</div>
 					<table class="table table-dark table-hover">
 						<thead>
@@ -99,12 +100,12 @@
 								<th scope="row" th:text="${stat.index + 1}"></th>
 								<td th:text="${suplementoDTO.getNombre_suplemento}"></td>
 								<td th:text="${suplementoDTO.getDesc_suplemento}"></td>
-								<td th:text="${suplementoDTO.getPrecio_suplemento}"></td>
+								<td th:text="${suplementoDTO.getPrecio_suplemento}"> $</td>
 								<td th:text="${suplementoDTO.getTipo_suplemento}"></td>
 								<td th:text="${suplementoDTO.getMarca_suplemento}"></td>
 								<td>
-									<i class="fa-solid fa-pen-to-square" style="color: green; padding-left: 15px;"></i>
-									<i class="fa-solid fa-trash" style="color: red; padding-left: 35px;" th:attr="data-idSuplemento=${suplementoDTO.getId_suplemento()}"
+									<a th:href="@{/admin/editar-suplemento/} + ${suplementoDTO.getId_suplemento()}"><i class="fa-solid fa-pen-to-square" style="color: green; padding-left: 15px;"></i></a>
+									<i class="fa-solid fa-trash" style="color: red; margin-left: 35px; cursor: pointer;" th:attr="data-idSuplemento=${suplementoDTO.getId_suplemento()}"
 										onclick="compruebaEliminar(event)"></i>
 								</td>
 							</tr>
@@ -139,6 +140,7 @@
     	}
 	</script>
 	
+	<!-- Control borrado suplemento -->
 	<script th:if="${param.success}">
 		Swal.fire({
             title: "Éxito!",
@@ -154,6 +156,25 @@
             icon: "error"
         });
 	</script>
+	<!-- Control borrado suplemento -->
+	
+	<!-- Control agregar suplemento -->
+	<script th:if="${param.suplementoAgregadoSuccess}">
+		Swal.fire({
+            title: "Éxito!",
+            text: "El suplemento se ha agregado con éxito!",
+            icon: "success"
+        });
+	</script>
+	
+	<script th:if="${param.suplementoAgregadoError}">
+		Swal.fire({
+            title: "Error!",
+            text: "El suplemento no se ha podido agregar!",
+            icon: "error"
+        });
+	</script>
+	<!-- Control agregar suplemento -->
 </body>
 
 </html>
