--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -59,10 +59,10 @@
 							<a class="nav-link text-white" th:href="@{/admin/administracion-usuarios}">Administración</a>
 						</li>
 						<li class="nav-item perfilLink">
-							<a href="#" class="nav-link text-white">Perfil</a>
+							<a th:href="@{/perfil}" class="nav-link text-white">Perfil</a>
 						</li>
 					</ul>
-					<a href="#" class="iconoPerfil"><i class="fa-solid fa-user"></i></a>
+					<a th:href="@{/perfil}" class="iconoPerfil"><i class="fa-solid fa-user"></i></a>
 				</div>
 			</div>
 		</nav>
