--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Agrega Suplemento - ProyectoFinalDWS</title>
+	<title>Perfil - ProyectoFinalDIW</title>
 	<!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"
@@ -14,16 +14,13 @@
 		asp-append-version="true"></script>
 	<!-- Fin Bootstrap -->
 	<!-- CSS -->
-	<link rel="stylesheet" th:href="@{/css/style.css}" asp-append-version="true" />
+	<link rel="stylesheet" href="css/style.css" asp-append-version="true" />
 	<!-- Fin CSS -->
 	<!-- Font awesome -->
 	<link
 		href="https://cdn.jsdelivr.net/gh/eliyantosarage/font-awesome-pro@main/fontawesome-pro-6.5.1-web/css/all.min.css"
 		rel="stylesheet" asp-append-version="true">
 	<!-- Fin Font awesome -->
-    <!-- SweetAlert2 -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" asp-append-version="true"></script>
-    <!-- Fin SweetAlert2 -->
 </head>
 
 <body>
@@ -31,7 +28,7 @@
 		<nav class="navbar navbar-expand-lg"
 			style="background: linear-gradient(90deg, rgba(141,148,241,1) 0%, rgba(157,141,241,1) 49%, rgba(181,141,241,1) 100%);;">
 			<div class="container-fluid">
-				<img th:src="@{/img/logo2.png}" alt="Logo" width="40" height="40"
+				<img src="img/logo2.png" alt="Logo" width="40" height="40"
 					class="d-inline-block align-text-top">
 				<a class="navbar-brand text-white nombreTiendaSuplementos">Tienda de Suplementos</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -58,7 +55,7 @@
 								<li><a class="dropdown-item" href="#">Ver Todo</a></li>
 							</ul>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
 							<a class="nav-link text-white" th:href="@{/admin/administracion-usuarios}">Administración</a>
 						</li>
 						<li class="nav-item perfilLink">
@@ -73,61 +70,18 @@
 	
 	<div class="container">
 		<main role="main" class="pb-3">
-			<div class="row">
+			<div class="row" style="margin-top: 25px;">
 				<div class="col">
-					<div class="contenedor">
-						<div class="contenedor-imagen">
-							<img th:src="@{/img/usuarios/profile.jpg}" class="card-img-top imagen" alt="Foto de suplemento genérico"
-								id="profile-pic">
-						</div>
-						<div class="inputs-form">
-							<form method="post" th:action="@{/admin/agregar-suplemento}" th:object="${suplementoDTO}"  enctype="multipart/form-data">
-								<div class="mb-3">
-									<label for="imagenForm" class="btn btn-primary botonImagen">Añadir imagen</label>
-									<input type="file" accept="image/jpeg, image/png, image/jpg" id="imagenForm"
-										style="display: none;" name="imagenFile" required>
-								</div>
-								<div class="mb-3">
-									<label for="nombreForm" class="form-label">Nombre</label>
-									<input type="text" class="form-control inputVistaEditar" id="nombreForm" th:field="*{nombre_suplemento}" required>
-								</div>
-								<div class="mb-3">
-									<label for="descForm" class="form-label">Descripcion</label>
-									<textarea class="form-control inputVistaEditar" id="descForm" th:field="*{desc_suplemento}" rows="3"
-										required></textarea>
-								</div>
-								<div class="mb-3">
-									<label for="precioForm" class="form-label">Precio</label>
-									<input type="text" class="form-control inputVistaEditar" id="precioForm" th:field="*{precio_suplemento}" required>
-								</div>
-								<div class="mb-3">
-									<label for="marcaForm" class="form-label">Marca</label>
-									<input type="text" class="form-control inputVistaEditar" id="marcaForm" th:field="*{marca_suplemento}" required>
-								</div>
-								<div class="mb-3">
-									<label for="tipoForm" class="form-label">Tipo</label>
-									<input type="text" class="form-control inputVistaEditar" id="tipoForm" th:field="*{tipo_suplemento}" required>
-								</div>
-								<input type="text" class="form-control" name="id_suplemento" th:field="*{id_suplemento}"
-									style="display:none">
-								<button type="submit" class="btn btn-primary">Enviar</button>
-							</form>
-							<a th:href="@{/admin/administracion-suplementos}"
-								class="btn btn-primary botonVolver">Volver</a>
-						</div>
+					<div class="divContenedorPerfil ">
+						<img th:if="${usuarioDTO.getRutaImagen_usuario() == null}" src="https://upload.wikimedia.org/wikipedia/commons/4/41/Profile-720.png" class="img-fluid imagenPerfil" alt="dwa">
+						<img th:if="${usuarioDTO.getRutaImagen_usuario() != null}" th:src="${usuarioDTO.getRutaImagen_usuario()}" class="img-fluid imagenPerfil" alt="dwa">
+						<h2 class="nombrePerfil" th:text="${usuarioDTO.getNombre_usuario()}">Francisco José</h2>
+						<a class="btn btn-primary botonVolverPerfil" th:href="@{/acceso/logout}">Cerrar sesión</a>
 					</div>
 				</div>
 			</div>
 		</main>
 	</div>
-	<script>
-	    let profilePic = document.getElementById("profile-pic");
-	    let inputFile = document.getElementById("imagenForm");
-	
-	    inputFile.onchange = function () {
-	        profilePic.src = URL.createObjectURL(inputFile.files[0]);
-	    }
-	</script>
 </body>
 
 </html>
