06/02/2024, terminado de ordenar proyecto

--- a/src/main/resources/templates/confirmarEmail.html
+++ b/src/main/resources/templates/confirmarEmail.html
@@ -24,7 +24,7 @@
 		<!-- Activado mensaje -->
         <div th:if="${param.success}">
 			<h1>Cuenta activada</h1>
-			<p>Su cuenta ha sido activada, pulse <a th:href="@{/acceso/login}">aquí</a> para iniciar sesión.</p>
+			<p>Su cuenta ha sido activada, pulse <a th:href="@{/login}">aquí</a> para iniciar sesión.</p>
 		</div>
 		<!-- Fin Activado mensaje -->
 		
