--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <form method="post" th:action="@{/acceso/login}">
+        <form method="post" th:action="@{/login}">
             <h1>Inicio Sesión</h1>
             <div class="input-box">
                 <input type="email" placeholder="Email" name="username" required>
@@ -32,7 +32,7 @@
             </div>
 
             <div class="remember-forgot">
-                <a th:href="@{/acceso/modificar-password}">¿Has olvidado la contraseña?</a>
+                <a th:href="@{/restablecer}">¿Has olvidado la contraseña?</a>
             </div>
 			
 			<!-- Control de alertas -->
@@ -56,7 +56,7 @@
             <button type="submit" class="boton">Enviar</button>
 
             <div class="register-link">
-                <p>¿Todavía no estás registrado? <a th:href="@{/acceso/register}">Registrate</a></p>
+                <p>¿Todavía no estás registrado? <a th:href="@{/register}">Registrate</a></p>
             </div>
         </form>
     </div>
