--- a/src/main/resources/templates/modificarContrasenya.html
+++ b/src/main/resources/templates/modificarContrasenya.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<div class="wrapper">
-        <form method="post" th:action="@{/acceso/modificar-password}" th:object="${usuarioDTO}">
+        <form method="post" th:action="@{/restablecer}" th:object="${usuarioDTO}">
             <h1>Modificar contraseña</h1>
             <div class="input-box">
                 <input type="email" placeholder="Email" th:field="*{email_usuario}" required>
@@ -28,7 +28,7 @@
             </div>
 
             <div class="remember-forgot" style="margin-bottom: 2px;">
-                <p>¿Has recordado la contraseña? <a th:href="@{/acceso/login}" style="font-weight: 600;">Pulsa aquí</a></p>
+                <p>¿Has recordado la contraseña? <a th:href="@{/login}" style="font-weight: 600;">Pulsa aquí</a></p>
             </div>
 			
 			<!-- Control de errores -->
