--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div class="wrapper">
-        <form method="post" th:action="@{/acceso/register}" th:object="${usuarioDTO}">
+        <form method="post" th:action="@{/register}" th:object="${usuarioDTO}">
             <h1>Registro sesión</h1>
             <div class="input-box">
                 <input type="email" placeholder="Email" name="email_usuario" th:field="*{email_usuario}" required>
@@ -56,7 +56,7 @@
             <button type="submit" class="boton">Enviar</button>
 
             <div class="register-link">
-                <p>¿Ya estás registrado? <a th:href="@{/acceso/login}">Inicia sesión</a></p>
+                <p>¿Ya estás registrado? <a th:href="@{/login}">Inicia sesión</a></p>
             </div>
         </form>
     </div>
