--- a/src/main/resources/templates/cambiarPassword.html
+++ b/src/main/resources/templates/cambiarPassword.html
@@ -23,6 +23,7 @@
     <div class="wrapper">
         <form method="post" th:action="@{/restablecer/cambiar-password}" th:object="${usuarioDTO}">
             <h1>Restablecer contraseña</h1>
+            <input type="text" name="token" th:value="${token}" style="display: none;" required>
             <div class="input-box">
                 <input type="password" placeholder="Nueva Contraseña" name="psswd_usuario" th:field="*{psswd_usuario}" required>
                 <i class="fa-solid fa-envelope"></i>
@@ -33,6 +34,17 @@
             </div>
 			
 			<!-- Control de errores -->
+			<div th:if="${param.success}" class="alert alert-success" role="alert">
+                Se ha cambiado la contraseña con éxito!!
+            </div>
+            
+            <div th:if="${param.error}" class="alert alert-danger" role="alert">
+                Se ha producido un error. Vuelva a intentarlo más tarde!!
+            </div>
+            
+            <div th:if="${param.password}" class="alert alert-danger" role="alert">
+                Las contraseñas tienen que coincidir!!
+            </div>
 			<!-- Control de errores -->
             <button type="submit" class="boton">Enviar</button>
         </form>
