--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -14,6 +14,15 @@
     color: white;
 }
 
+.carrito {
+	margin-right: 20px;
+	font-size: 18px;
+}
+
+.carrito i{
+	color: white;
+}
+
 .tablaAdmin {
     margin-top: 150px;
 }
@@ -28,6 +37,10 @@
     }
 
     .iconoPerfil{
+        display: none;
+    }
+    
+    .carrito{
         display: none;
     }
 }
