--- a/src/main/resources/templates/administracionUsuarios.html
+++ b/src/main/resources/templates/administracionUsuarios.html
@@ -53,7 +53,11 @@
 						<li class="nav-item perfilLink">
 							<a th:href="@{/perfil}" class="nav-link text-white">Perfil</a>
 						</li>
+						<li class="nav-item perfilLink">
+							<a th:href="@{/carrito}" class="nav-link text-white">Carrito</a>
+						</li>
 					</ul>
+					<a th:href="@{/carrito}" class="carrito"><i class="fa-regular fa-cart-shopping"></i></a>
 					<a th:href="@{/perfil}" class="iconoPerfil"><i class="fa-solid fa-user"></i></a>
 				</div>
 			</div>
