--- a/bin/src/main/resources/templates/login.html
+++ b/bin/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,25 +20,43 @@
 </head>
 <body>
     <div class="wrapper">
-        <form>
+        <form method="post" th:action="@{/login}">
             <h1>Inicio Sesión</h1>
             <div class="input-box">
-                <input type="email" placeholder="Email" name="email_usuario" required>
+                <input type="email" placeholder="Email" name="username" required>
                 <i class="fa-solid fa-envelope"></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Contraseña" name="psswd_usuario" required>
+                <input type="password" placeholder="Contraseña" name="password" required>
                 <i class="fa-solid fa-lock"></i>
             </div>
 
             <div class="remember-forgot">
-                <a th:href="@{/acceso/modificar-password}">¿Has olvidado la contraseña?</a>
+                <a th:href="@{/restablecer}">¿Has olvidado la contraseña?</a>
             </div>
-
+			
+			<!-- Control de alertas -->
+            <div th:if="${param.logout}" class="alert alert-success" role="alert">
+                Se ha cerrado la sesión con éxito!!
+            </div>
+            
+            <div th:if="${param.activada}" class="alert alert-danger" role="alert">
+                La cuenta no ha sido activada!!
+            </div>
+            
+            <div th:if="${param.email}" class="alert alert-danger" role="alert">
+                El email y/o contraseña no son correctos!!
+            </div>
+            
+            <div th:if="${param.error}" class="alert alert-danger" role="alert">
+                Se ha producido un error. Vuelve a intentarlo más tarde!!
+            </div>
+            <!-- Fin Control de alertas -->
+			
             <button type="submit" class="boton">Enviar</button>
 
             <div class="register-link">
-                <p>¿Todavía no estás registrado? <a th:href="@{/acceso/register}">Registrate</a></p>
+                <p>¿Todavía no estás registrado? <a th:href="@{/register}">Registrate</a></p>
             </div>
         </form>
     </div>
