--- a/bin/src/main/resources/templates/modificarContrasenya.html
+++ b/bin/src/main/resources/templates/modificarContrasenya.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,20 +19,34 @@
     <!-- Fin Font awesome -->
 </head>
 <body>
-<div class="wrapper">
-        <form>
+	<div class="wrapper">
+        <form method="post" th:action="@{/restablecer}" th:object="${usuarioDTO}">
             <h1>Modificar contraseña</h1>
             <div class="input-box">
-                <input type="email" placeholder="Email" name="email_usuario" required>
+                <input type="email" placeholder="Email" th:field="*{email_usuario}" required>
                 <i class="fa-solid fa-envelope"></i>
             </div>
 
             <div class="remember-forgot" style="margin-bottom: 2px;">
-                <p>¿Has recordado la contraseña? <a  style="font-weight: 600;">Pulsa aquí</a></p>
+                <p>¿Has recordado la contraseña? <a th:href="@{/login}" style="font-weight: 600;">Pulsa aquí</a></p>
             </div>
-
+			
+			<!-- Control de errores -->
+            <div th:if="${param.success}" class="alert alert-success" role="alert">
+                Se ha enviado un correo para restablecer la contraseña!!
+            </div>
+            
+            <div th:if="${param.error}" class="alert alert-danger" role="alert">
+                Se ha producido un error. Vuelva a intentarlo más tarde!!
+            </div>
+            
+            <div th:if="${param.email}" class="alert alert-danger" role="alert">
+                El email introducido no existe!!
+            </div>
+            <!-- Fin Control de errores -->
+            
             <button type="submit" class="boton">Enviar</button>
         </form>
-    </div>
+	</div>
 </body>
 </html>
