--- a/src/main/resources/templates/carrito.html
+++ b/src/main/resources/templates/carrito.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Administracion Suplementos - Tienda de Suplementos</title>
+	<title>Carrito - Tienda de Suplementos</title>
 	<!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+	<!-- Nav -->
 	<header>
 		<nav class="navbar navbar-expand-lg"
 			style="background: linear-gradient(90deg, rgba(141,148,241,1) 0%, rgba(157,141,241,1) 49%, rgba(181,141,241,1) 100%);;">
@@ -47,7 +48,7 @@
 						<li class="nav-item">
                             <a class="nav-link active text-white" aria-current="page" th:href="@{/nutricion/3}">Nutrición</a>
                         </li>
-						<li class="nav-item">
+						<li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
 							<a class="nav-link text-white" th:href="@{/admin/administracion-usuarios}">Administración</a>
 						</li>
 						<li class="nav-item perfilLink">
@@ -63,81 +64,81 @@
 			</div>
 		</nav>
 	</header>
+	<!-- Fin Nav -->
 	
+	<!-- Contenedor -->
 	<div class="container">
 		<main role="main" class="pb-3">
 			<div class="row tablaAdmin">
 				<div class="col">
-					<div style="margin-bottom: 5px;">
-						<a class="btn btn-outline-secondary" role="button" th:href="@{/admin/administracion-usuarios}">Usuarios</a>
-						<a class="btn btn-outline-secondary"  role="button" th:href="@{/admin/administracion-suplementos}">Productos</a>
-						<a class="btn btn-outline-secondary" th:href="@{/admin/agrega-suplemento}" role="button" style="float: right">Añadir Producto</a>
-					</div>
-					<table class="table table-dark table-hover">
+					<!-- Tabla -->
+					<table class="table table-dark table-hover text-center">
 						<thead>
 							<tr>
-			                    <th scope="col">#</th>
-			                    <th scope="col">Nombre</th>
-			                    <th scope="col">Descripción</th>
-			                    <th scope="col">Precio</th>
-			                    <th scope="col">Tipo</th>
-			                    <th scope="col">Marca</th>
-			                    <th scope="col">Editar/Eliminar</th>
+								<th scope="col">#</th>
+								<th scope="col">Suplemento</th>
+								<th scope="col">Cantidad</th>
+								<th scope="col">Precio unidad</th>
+								<th scope="col">Eliminar</th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr th:if="${listaSuplementosDTO != null && listaSuplementosDTO.size() < 1}">
-								<td colspan="7" style="text-align: center">No existe ningún suplemento.</td>
+							<tr th:if="${listaCarritoDTO != null && listaCarritoDTO.size() == 0}">
+								<td colspan="5" style="text-align: center">No existe ningún suplemento añadido al carrito.</td>
 							</tr>
-							<tr th:each="suplementoDTO, stat: ${listaSuplementosDTO}">
-								<th scope="row" th:text="${stat.index + 1}"></th>
-								<td th:text="${suplementoDTO.getNombre_suplemento}"></td>
-								<td th:text="${suplementoDTO.getDesc_suplemento}"></td>
-								<td th:text="${suplementoDTO.getPrecio_suplemento} + '$'"></td>
-								<td th:text="${suplementoDTO.getTipo_suplemento}"></td>
-								<td th:text="${suplementoDTO.getMarca_suplemento}"></td>
+							<tr th:each="carritoDTO: ${listaCarritoDTO}">
+								<th scope="row"><img th:src="'data:image/png;base64, '+ ${carritoDTO.getSuplementoDTO().getImagen_suplemento()}" class="img-fluid" style="max-width: 80px; max-height: 80px;" th:alt="${carritoDTO.getSuplementoDTO().getNombre_suplemento()}"></th>
+								<td th:text="${carritoDTO.getSuplementoDTO().getNombre_suplemento()}"></td>
+								<td th:text="${carritoDTO.getCantidad()}"></td>
+								<td th:text="${carritoDTO.getSuplementoDTO().getPrecio_suplemento()} + '$'"></td>
 								<td>
-									<a th:href="@{/admin/editar-suplemento/} + ${suplementoDTO.getId_suplemento()}"><i class="fa-solid fa-pen-to-square" style="color: green; padding-left: 15px;"></i></a>
-									<i class="fa-solid fa-trash" style="color: red; margin-left: 35px; cursor: pointer;" th:attr="data-idSuplemento=${suplementoDTO.getId_suplemento()}"
+									<i class="fa-solid fa-trash" style="color: red; cursor: pointer;" 
+										th:attr="data-idCarrito=${carritoDTO.getId_carrito()}" 
 										onclick="compruebaEliminar(event)"></i>
 								</td>
 							</tr>
 						</tbody>
 					</table>
+					<!-- Fin Tabla -->
+					
+					<!-- Boton comprar -->
+					<button class="btn btn-primary" style="float: right;">Comprar</button>
+					<!-- Fin Boton comprar -->
 				</div>
 			</div>
 		</main>
 	</div>
-	<script>
-		function compruebaEliminar(event) {
-			const id_suplemento = event.currentTarget.getAttribute("data-idSuplemento");
-	        Swal.fire({
-	            title: "¿Estás seguro?",
-	            text: "No se podrán revertir los cambios!",
-	            icon: "warning",
-	            showCancelButton: true,
-	            confirmButtonColor: "#3085d6",
-	            cancelButtonColor: "#d33",
-	            confirmButtonText: "Si, eliminar!",
-	            cancelButtonText: "Cancelar"
-	        }).then((result) => {
-	            if (result.isConfirmed) {
-	                // Eliminamos
-	                // Obtén la ruta base de la URL actual (localhost:1234)
-	                const baseUrl = window.location.origin;
+	<!-- Fin Contenedor -->
 	
-	                // Redirige a la nueva URL (/Admin/BorrarSuplemento)
-	                window.location.href = baseUrl + '/admin/borra-suplemento/' + id_suplemento;
-	            }
-	        });
-    	}
+	<script>
+
+		function compruebaEliminar(event) {
+			const id_carrito = event.currentTarget.getAttribute("data-idCarrito");
+			Swal.fire({
+				title: "¿Estás seguro?",
+				text: "No se podrán revertir los cambios!",
+				icon: "warning",
+				showCancelButton: true,
+				confirmButtonColor: "#3085d6",
+				cancelButtonColor: "#d33",
+				confirmButtonText: "Si, eliminar!"
+			}).then((result) => {
+				if (result.isConfirmed) {
+					// Eliminamos
+					// Obtén la ruta base de la URL actual (localhost:1234)
+					const baseUrl = window.location.origin;
+
+					// Redirige a la nueva URL (/Admin/BorrarUsuario)
+					window.location.href = baseUrl + '/carrito/borra-suplemento/' + id_carrito;
+				}
+			});
+		}
 	</script>
 	
-	<!-- Control borrado suplemento -->
 	<script th:if="${param.success}">
 		Swal.fire({
             title: "Éxito!",
-            text: "El suplemento se ha borrado con éxito!",
+            text: "El suplemento se ha borrado del carrito con éxito!",
             icon: "success"
         });
 	</script>
@@ -149,25 +150,6 @@
             icon: "error"
         });
 	</script>
-	<!-- Control borrado suplemento -->
-	
-	<!-- Control agregar suplemento -->
-	<script th:if="${param.suplementoAgregadoSuccess}">
-		Swal.fire({
-            title: "Éxito!",
-            text: "El suplemento se ha agregado con éxito!",
-            icon: "success"
-        });
-	</script>
-	
-	<script th:if="${param.suplementoAgregadoError}">
-		Swal.fire({
-            title: "Error!",
-            text: "El suplemento no se ha podido agregar!",
-            icon: "error"
-        });
-	</script>
-	<!-- Control agregar suplemento -->
 </body>
 
 </html>
