15/02/2023, solo falta control de excepciones y log

--- a/src/main/resources/templates/agregarSuplemento.html
+++ b/src/main/resources/templates/agregarSuplemento.html
@@ -106,7 +106,7 @@
 								<button type="submit" class="btn btn-primary">Enviar</button>
 							</form>
 							<a th:href="@{/admin/administracion-suplementos}"
-								class="btn btn-primary botonVolver">Volver</a>
+								class="btn btn-danger botonVolver">Volver</a>
 						</div>
 					</div>
 				</div>
