--- a/src/main/resources/templates/administracionUsuarios.html
+++ b/src/main/resources/templates/administracionUsuarios.html
@@ -71,6 +71,7 @@
 					<div style="margin-bottom: 5px;">
 						<a class="btn btn-outline-secondary" role="button" th:href="@{/admin/administracion-usuarios}">Usuarios</a>
 						<a class="btn btn-outline-secondary"  role="button" th:href="@{/admin/administracion-suplementos}">Productos</a>
+						<a class="btn btn-outline-secondary" th:href="@{/admin/agrega-usuario}" role="button" style="float: right">Añadir Usuario</a>
 					</div>
 					<table class="table table-dark table-hover">
 						<thead>
@@ -142,21 +143,53 @@
 		}
 	</script>
 	
+	<!-- Control de alertas -->
+	
+	<!-- Control borrar -->
 	<script th:if="${param.success}">
 		Swal.fire({
-            title: "Éxito!",
-            text: "El usuario se ha borrado con éxito!",
-            icon: "success"
-        });
+			title: "Éxito!",
+			text: "El usuario se ha borrado con éxito!",
+			icon: "success"
+		});
 	</script>
 	
 	<script th:if="${param.error}">
 		Swal.fire({
-            title: "Error!",
-            text: "El usuario no se ha podido eliminar!",
-            icon: "error"
-        });
+			title: "Error!",
+			text: "El usuario no se ha podido eliminar!",
+			icon: "error"
+		});
 	</script>
+	<!-- Fin Control borrar -->
+	
+	<!-- Control agregar -->
+	<script th:if="${param.usuarioAgregadoSuccess}">
+		Swal.fire({
+			title: "Éxito!",
+			text: "El usuario se ha agregado con éxito!",
+			icon: "success"
+		});
+	</script>
+	
+	<script th:if="${param.usuarioAgregadoExiste}">
+		Swal.fire({
+			title: "Error!",
+			text: "El email introducido ya existe!",
+			icon: "error"
+		});
+	</script>
+	
+	<script th:if="${param.usuarioAgregadoError}">
+		Swal.fire({
+			title: "Error!",
+			text: "Se ha producido un error. Vuelva a intentarlo más tarde!",
+			icon: "error"
+		});
+	</script>
+	<!-- Fin Control agregar -->
+	
+	<!-- Fin Control de alertas -->
 </body>
 
 </html>
