--- a/src/main/resources/templates/agregarUsuario.html
+++ b/src/main/resources/templates/agregarUsuario.html
@@ -85,23 +85,23 @@
 								<div class="mb-3">
 									<label for="imagenForm" class="btn btn-primary botonImagen">Añadir imagen</label>
 									<input type="file" accept="image/jpeg, image/png, image/jpg" id="imagenForm"
-										style="display: none;" name="imagenFile" required>
+										style="display: none;" name="imagenFile">
 								</div>
 								<div class="mb-3">
 									<label for="emailForm" class="form-label">Email</label>
-									<input type="email" class="form-control inputVistaEditar" id="emailForm" th:field="*{email_usuario}" required>
+									<input type="email" class="form-control inputVistaEditar" id="emailForm" th:field="*{email_usuario}" maxlength="50" required>
 								</div>
 								<div class="mb-3">
 									<label for="nombreForm" class="form-label">Nombre</label>
-									<input type="text" class="form-control inputVistaEditar" id="nombreForm" th:field="*{nombre_usuario}" required>
+									<input type="text" class="form-control inputVistaEditar" id="nombreForm" th:field="*{nombre_usuario}" maxlength="50" required>
 								</div>
 								<div class="mb-3">
 									<label for="tlfForm" class="form-label">Teléfono</label>
-									<input type="text" class="form-control inputVistaEditar" id="tlfForm" th:field="*{tlf_usuario}" required>
+									<input type="text" class="form-control inputVistaEditar" id="tlfForm" th:field="*{tlf_usuario}" maxlength="15" required>
 								</div>
 								<div class="mb-3">
 									<label for="psswdForm" class="form-label">Contraseña</label>
-									<input type="password" class="form-control inputVistaEditar" id="psswdForm" th:field="*{psswd_usuario}" required>
+									<input type="password" class="form-control inputVistaEditar" id="psswdForm" th:field="*{psswd_usuario}" maxlength="255" required>
 								</div>
 								<button type="submit" class="btn btn-primary">Enviar</button>
 							</form>
