--- a/src/main/resources/templates/carrito.html
+++ b/src/main/resources/templates/carrito.html
@@ -110,7 +110,7 @@
 						<button th:if="${listaCarritoDTO != null && listaCarritoDTO.size() > 0}" class="btn btn-primary" style="float: right;">Comprar</button>
 						<!-- Fin Boton comprar -->
 						
-						<input name="total" th:value="${precioTotal}" style="display: none;" disabled>
+						<input name="total" th:value="${precioTotal}" style="display: none;">
 					</form>
 					<!-- Fin Formulario -->
 				</div>
