--- a/src/main/resources/templates/editarSuplemento.html
+++ b/src/main/resources/templates/editarSuplemento.html
@@ -88,7 +88,7 @@
 								</div>
 								<div class="mb-3">
 									<label for="descForm" class="form-label">Descripcion</label>
-									<textarea class="form-control inputVistaEditar" id="descForm" th:field="*{desc_suplemento}" rows="3"
+									<textarea class="form-control inputVistaEditar" id="descForm" th:field="*{desc_suplemento}" rows="3" maxlength="254"
 										required></textarea>
 								</div>
 								<div class="mb-3">
