--- a/src/main/resources/templates/suplementos.html
+++ b/src/main/resources/templates/suplementos.html
@@ -102,6 +102,7 @@
 									<h5 class="card-title" th:text="${suplemento.getNombre_suplemento()}"></h5>
 									<p th:if="${suplemento.getDesc_suplemento().length > 50}" th:text="${suplemento.getDesc_suplemento().substring(0, 50)} + ..." class="card-text"></p>
 									<p th:if="${suplemento.getDesc_suplemento().length <= 50}" class="card-text" th:text="${suplemento.getDesc_suplemento()}"></p>
+									<p class="card-text">Precio: <span th:text="${suplemento.getPrecio_suplemento()}"></span>€</p>
 									<a th:href="@{/nutricion/agrega-carrito/} + ${suplemento.getId_suplemento()}" class="btn btn-primary">Añadir al carrito</a>
 								</div>
 							</div>
